tests/snapshots/scripts/fmSyntaxColorizer/fmSyntaxColorizer - ID 64/Syntax - ID 56/Filter FM-Version - ID 172.xml.snap
---
source: src/main.rs
expression: output_content
---
<Script>
	<ScriptReference id="172" name="Filter FM-Version"></ScriptReference>
	<ObjectList membercount="7">
		<Step id="89" name="# (Kommentar)" enable="True">
			<ParameterValues membercount="1">
				<Parameter type="Comment">
					<Comment></Comment>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="89" name="# (Kommentar)" enable="True">
			<Options>4</Options>
			<ParameterValues membercount="1">
				<Parameter type="Comment">
					<Comment value="20160923 MrW "></Comment>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="89" name="# (Kommentar)" enable="True">
			<ParameterValues membercount="1">
				<Parameter type="Comment">
					<Comment></Comment>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="87" name="Eigenes Dialogfeld anzeigen" enable="True">
			<Options>16389</Options>
			<ParameterValues membercount="5">
				<Parameter type="Message">
					<Calculation datatype="1" position="1">
						<Calculation>
							<Text><![CDATA["Filter the syntax entries"]]></Text>
							<ChunkList hash="11EF48701D930517FE3A7C9FDA786CC7">
								<Chunk type="NoRef">&quot;Filter the syntax entries&quot;</Chunk>
							</ChunkList>
						</Calculation>
					</Calculation>
				</Parameter>
				<Parameter type="Button1" value="OK">
					<Boolean type="Commit" value="True"></Boolean>
				</Parameter>
				<Parameter type="Button2" value="Cancel">
					<Boolean type="Commit" value="False"></Boolean>
				</Parameter>
				<Parameter type="Button3">
					<Boolean type="Commit" value="False"></Boolean>
				</Parameter>
				<Parameter type="Field1">
					<Parameter type="Target">
						<FieldReference id="37" name="_gFM_Version">
							<repetition value="1"></repetition>
							<TableOccurrenceReference id="1065113" name="_Syntax"></TableOccurrenceReference>
						</FieldReference>
					</Parameter>
					<Boolean type="Passwort" value="False"></Boolean>
					<Parameter type="Label">
						<Calculation datatype="1" position="2">
							<Calculation>
								<Text><![CDATA["FM-Version"]]></Text>
								<ChunkList hash="0757859B343E420EF0C0C64FCED2B35C">
									<Chunk type="NoRef">&quot;FM-Version&quot;</Chunk>
								</ChunkList>
							</Calculation>
						</Calculation>
					</Parameter>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="68" name="Wenn" enable="True">
			<Options>16384</Options>
			<ParameterValues membercount="1">
				<Parameter type="Calculation">
					<Calculation datatype="7" position="0">
						<Calculation>
							<Text><![CDATA[Hole( LetzteMeldungswahl )= 1]]></Text>
							<ChunkList hash="23E282E0591B81FCC1BADF20ED2B0A20">
								<Chunk type="FunctionRef">Hole</Chunk>
								<Chunk type="NoRef">( </Chunk>
								<Chunk type="FunctionRef">LetzteMeldungswahl</Chunk>
								<Chunk type="NoRef"> )= 1</Chunk>
							</ChunkList>
						</Calculation>
					</Calculation>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="1" name="Script ausführen" enable="True">
			<Options>64</Options>
			<ParameterValues membercount="2">
				<Parameter type="List">
					<List name="Aus Liste" value="1">
						<ScriptReference id="173" name="Go to Syntax for given FM-Version"></ScriptReference>
					</List>
				</Parameter>
				<Parameter type="Parameter">
					<Parameter></Parameter>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="70" name="Ende (wenn)" enable="True">
		</Step>
	</ObjectList>
</Script>
