tests/snapshots/scripts/fmSyntaxColorizer/fmSyntaxColorizer - ID 64/Syntax - ID 56/Go to Syntax for given FM-Version - ID 173.xml.snap
---
source: src/main.rs
expression: output_content
---
<Script>
	<ScriptReference id="173" name="Go to Syntax for given FM-Version"></ScriptReference>
	<ObjectList membercount="15">
		<Step id="89" name="# (Kommentar)" enable="True">
			<ParameterValues membercount="1">
				<Parameter type="Comment">
					<Comment></Comment>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="89" name="# (Kommentar)" enable="True">
			<Options>4</Options>
			<ParameterValues membercount="1">
				<Parameter type="Comment">
					<Comment value="20140429 MrW Corrected bug, whereby more than 1-click start may have been necessary"></Comment>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="89" name="# (Kommentar)" enable="True">
			<Options>4</Options>
			<ParameterValues membercount="1">
				<Parameter type="Comment">
					<Comment value="20121101 MrW"></Comment>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="89" name="# (Kommentar)" enable="True">
			<ParameterValues membercount="1">
				<Parameter type="Comment">
					<Comment></Comment>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="85" name="AnwenderAbbruchZulassen setzen" enable="True">
			<Options>65536</Options>
			<ParameterValues membercount="1">
				<Parameter type="Boolean">
					<Boolean id="131072" value="False"></Boolean>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="86" name="Fehleraufzeichnung setzen" enable="True">
			<Options>196608</Options>
			<ParameterValues membercount="1">
				<Parameter type="Boolean">
					<Boolean id="131072" value="True"></Boolean>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="89" name="# (Kommentar)" enable="True">
			<ParameterValues membercount="1">
				<Parameter type="Comment">
					<Comment></Comment>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="68" name="Wenn" enable="True">
			<Options>16384</Options>
			<ParameterValues membercount="1">
				<Parameter type="Calculation">
					<Calculation datatype="7" position="0">
						<Calculation>
							<Text><![CDATA[IstLeer ( _Syntax::_gFM_Version ) ODER _IsKeyALT]]></Text>
							<ChunkList hash="F1E97BBC3C5C7E5AFA77A0E2871C4345">
								<Chunk type="FunctionRef">IstLeer</Chunk>
								<Chunk type="NoRef"> ( </Chunk>
								<Chunk type="FieldRef">
									<FieldReference id="37" name="_gFM_Version" repetition="1">
										<TableOccurrenceReference id="1065113" name="_Syntax"></TableOccurrenceReference>
									</FieldReference>
								</Chunk>
								<Chunk type="NoRef"> ) </Chunk>
								<Chunk type="FunctionRef">ODER</Chunk>
								<Chunk type="NoRef"> </Chunk>
								<Chunk type="CustomFunctionRef">_IsKeyALT</Chunk>
							</ChunkList>
						</Calculation>
					</Calculation>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="76" name="Feldwert setzen" enable="True">
			<Options>16385</Options>
			<ParameterValues membercount="2">
				<Parameter type="FieldReference">
					<FieldReference id="37" name="_gFM_Version">
						<repetition value="1"></repetition>
						<TableOccurrenceReference id="1065113" name="_Syntax"></TableOccurrenceReference>
					</FieldReference>
				</Parameter>
				<Parameter type="Calculation">
					<Calculation datatype="1" position="0">
						<Calculation>
							<Text><![CDATA[_FMVersionNr ( 2 )]]></Text>
							<ChunkList hash="85139CFFA8BAE6C32C6FFFA8E4444AD4">
								<Chunk type="CustomFunctionRef">_FMVersionNr</Chunk>
								<Chunk type="NoRef"> ( 2 )</Chunk>
							</ChunkList>
						</Calculation>
					</Calculation>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="70" name="Ende (wenn)" enable="True">
		</Step>
		<Step id="89" name="# (Kommentar)" enable="True">
			<ParameterValues membercount="1">
				<Parameter type="Comment">
					<Comment></Comment>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="6" name="Gehe zu Layout" enable="True">
			<Options>8</Options>
			<ParameterValues membercount="2">
				<Parameter type="LayoutReferenceContainer">
					<LayoutReferenceContainer value="5">
						<LayoutReference id="6" name="Syntax"></LayoutReference>
					</LayoutReferenceContainer>
				</Parameter>
				<Parameter type="Animation">
					<Animation name="Ohne" value="0"></Animation>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="74" name="Gehe zu Bezugsdatensatz" enable="True">
			<Options>33554442</Options>
			<ParameterValues membercount="1">
				<Parameter type="Related">
					<TableOccurrenceReference id="1065151" name="Syntax.Filter_FmVersion"></TableOccurrenceReference>
					<LayoutReferenceContainer value="5">
						<LayoutReference id="6" name="Syntax"></LayoutReference>
					</LayoutReferenceContainer>
					<Animation name="Ohne" value="0"></Animation>
					<Options ShowRelated="True"></Options>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="89" name="# (Kommentar)" enable="True">
			<ParameterValues membercount="1">
				<Parameter type="Comment">
					<Comment></Comment>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="1" name="Script ausführen" enable="True">
			<Options>64</Options>
			<ParameterValues membercount="2">
				<Parameter type="List">
					<List name="Aus Liste" value="1">
						<ScriptReference id="87" name="Sort Syntax"></ScriptReference>
					</List>
				</Parameter>
				<Parameter type="Parameter">
					<Parameter></Parameter>
				</Parameter>
			</ParameterValues>
		</Step>
	</ObjectList>
</Script>
