tests/snapshots/scripts/fmSyntaxColorizer/fmSyntaxColorizer - ID 64/Syntax - ID 56/OnObjectModify _gID_ActivePalette #T# - ID 83.xml.snap
---
source: src/main.rs
expression: output_content
---
<Script>
	<ScriptReference id="83" name="OnObjectModify _gID_ActivePalette #T#"></ScriptReference>
	<ObjectList membercount="7">
		<Step id="89" name="# (Kommentar)" enable="True">
			<ParameterValues membercount="1">
				<Parameter type="Comment">
					<Comment></Comment>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="89" name="# (Kommentar)" enable="True">
			<Options>4</Options>
			<ParameterValues membercount="1">
				<Parameter type="Comment">
					<Comment value="20121101 MrW From Script trigger"></Comment>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="89" name="# (Kommentar)" enable="True">
			<ParameterValues membercount="1">
				<Parameter type="Comment">
					<Comment></Comment>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="75" name="Schreibe Änderung Datens./Abfrage" enable="True">
			<Options>128</Options>
			<ParameterValues membercount="3">
				<Parameter type="Boolean">
					<Boolean type="Dateneingabeüberprüfung unterdrücken" id="256" value="False"></Boolean>
				</Parameter>
				<Parameter type="Boolean">
					<Boolean type="Mit Dialog" id="128" value="False"></Boolean>
				</Parameter>
				<Parameter type="Boolean">
					<Boolean type="Schreiben erzwingen" id="512" value="False"></Boolean>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="80" name="Fenster aktualisieren" enable="True">
			<ParameterValues membercount="2">
				<Parameter type="Boolean">
					<Boolean type="Join-Ergebnisse im Cache löschen" id="256" value="False"></Boolean>
				</Parameter>
				<Parameter type="Boolean">
					<Boolean type="Externe Daten im Cache löschen" id="512" value="False"></Boolean>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="1" name="Script ausführen" enable="True">
			<Options>64</Options>
			<ParameterValues membercount="2">
				<Parameter type="List">
					<List name="Aus Liste" value="1">
						<ScriptReference id="43" name="Change Palette"></ScriptReference>
					</List>
				</Parameter>
				<Parameter type="Parameter">
					<Parameter></Parameter>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="89" name="# (Kommentar)" enable="True">
			<ParameterValues membercount="1">
				<Parameter type="Comment">
					<Comment></Comment>
				</Parameter>
			</ParameterValues>
		</Step>
	</ObjectList>
</Script>
