tests/snapshots/scripts/fmSyntaxColorizer/fmSyntaxColorizer - ID 64/Syntax - ID 56/Open Script Editor - ID 49.xml.snap
---
source: src/main.rs
expression: output_content
---
<Script>
	<ScriptReference id="49" name="Open Script Editor"></ScriptReference>
	<ObjectList membercount="1">
		<Step id="88" name="Scriptarbeitsbereich öffnen" enable="True">
		</Step>
	</ObjectList>
</Script>
