tests/snapshots/scripts/fmSyntaxColorizer/fmSyntaxColorizer - ID 64/Syntax - ID 56/Read and Edit Syntax Comment - ID 116.xml.snap
---
source: src/main.rs
expression: output_content
---
<Script>
	<ScriptReference id="116" name="Read and Edit Syntax Comment"></ScriptReference>
	<ObjectList membercount="23">
		<Step id="89" name="# (Kommentar)" enable="True">
			<ParameterValues membercount="1">
				<Parameter type="Comment">
					<Comment></Comment>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="89" name="# (Kommentar)" enable="True">
			<Options>4</Options>
			<ParameterValues membercount="1">
				<Parameter type="Comment">
					<Comment value="20210916 MrW Removed lingering pesky German :D"></Comment>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="89" name="# (Kommentar)" enable="True">
			<Options>4</Options>
			<ParameterValues membercount="1">
				<Parameter type="Comment">
					<Comment value="20121102 MrW "></Comment>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="89" name="# (Kommentar)" enable="True">
			<ParameterValues membercount="1">
				<Parameter type="Comment">
					<Comment></Comment>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="85" name="AnwenderAbbruchZulassen setzen" enable="True">
			<Options>65536</Options>
			<ParameterValues membercount="1">
				<Parameter type="Boolean">
					<Boolean id="131072" value="False"></Boolean>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="86" name="Fehleraufzeichnung setzen" enable="True">
			<Options>196608</Options>
			<ParameterValues membercount="1">
				<Parameter type="Boolean">
					<Boolean id="131072" value="True"></Boolean>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="89" name="# (Kommentar)" enable="True">
			<ParameterValues membercount="1">
				<Parameter type="Comment">
					<Comment></Comment>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="68" name="Wenn" enable="True">
			<Options>16384</Options>
			<ParameterValues membercount="1">
				<Parameter type="Calculation">
					<Calculation datatype="7" position="0">
						<Calculation>
							<Text><![CDATA[Hole( Fenstermodus ) = 1]]></Text>
							<ChunkList hash="867C9C708F22524C342CBCFD725C0330">
								<Chunk type="FunctionRef">Hole</Chunk>
								<Chunk type="NoRef">( </Chunk>
								<Chunk type="FunctionRef">Fenstermodus</Chunk>
								<Chunk type="NoRef"> ) = 1</Chunk>
							</ChunkList>
						</Calculation>
					</Calculation>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="87" name="Eigenes Dialogfeld anzeigen" enable="True">
			<Options>16389</Options>
			<ParameterValues membercount="6">
				<Parameter type="Title">
					<Calculation datatype="1" position="0">
						<Calculation>
							<Text><![CDATA["Search Comments"]]></Text>
							<ChunkList hash="4A77CAF67493E1654752EBB155D369CC">
								<Chunk type="NoRef">&quot;Search Comments&quot;</Chunk>
							</ChunkList>
						</Calculation>
					</Calculation>
				</Parameter>
				<Parameter type="Message">
					<Calculation datatype="1" position="1">
						<Calculation>
							<Text><![CDATA["Please enter your search criterium."]]></Text>
							<ChunkList hash="FB40D180F9F340BBDE3377B8A4E656AA">
								<Chunk type="NoRef">&quot;Please enter your search criterium.&quot;</Chunk>
							</ChunkList>
						</Calculation>
					</Calculation>
				</Parameter>
				<Parameter type="Button1" value="OK">
					<Boolean type="Commit" value="True"></Boolean>
				</Parameter>
				<Parameter type="Button2" value="Cancel">
					<Boolean type="Commit" value="False"></Boolean>
				</Parameter>
				<Parameter type="Button3">
					<Boolean type="Commit" value="False"></Boolean>
				</Parameter>
				<Parameter type="Field1">
					<Parameter type="Target">
						<FieldReference id="18" name="Comment">
							<repetition value="1"></repetition>
							<TableOccurrenceReference id="1065113" name="_Syntax"></TableOccurrenceReference>
						</FieldReference>
					</Parameter>
					<Boolean type="Passwort" value="False"></Boolean>
					<Parameter type="Label">
						<Calculation datatype="1" position="2">
							<Calculation>
								<Text><![CDATA["Search Comment"]]></Text>
								<ChunkList hash="1F8905341F4057A7F232B03A7587273F">
									<Chunk type="NoRef">&quot;Search Comment&quot;</Chunk>
								</ChunkList>
							</Calculation>
						</Calculation>
					</Parameter>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="69" name="Sonst" enable="True">
		</Step>
		<Step id="71" name="Schleife (Anfang)" enable="True">
			<ParameterValues membercount="1">
				<Parameter type="List">
					<List name="Immer" value="1"></List>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="68" name="Wenn" enable="True">
			<Options>16384</Options>
			<ParameterValues membercount="1">
				<Parameter type="Calculation">
					<Calculation datatype="7" position="0">
						<Calculation>
							<Text><![CDATA[NICHT IstLeer( _Syntax::Comment )]]></Text>
							<ChunkList hash="D9A3F1032B026AE3387E810C06CBF795">
								<Chunk type="FunctionRef">NICHT</Chunk>
								<Chunk type="NoRef"> </Chunk>
								<Chunk type="FunctionRef">IstLeer</Chunk>
								<Chunk type="NoRef">( </Chunk>
								<Chunk type="FieldRef">
									<FieldReference id="18" name="Comment" repetition="1">
										<TableOccurrenceReference id="1065113" name="_Syntax"></TableOccurrenceReference>
									</FieldReference>
								</Chunk>
								<Chunk type="NoRef"> )</Chunk>
							</ChunkList>
						</Calculation>
					</Calculation>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="89" name="# (Kommentar)" enable="True">
			<Options>4</Options>
			<ParameterValues membercount="1">
				<Parameter type="Comment">
					<Comment value="Read"></Comment>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="87" name="Eigenes Dialogfeld anzeigen" enable="True">
			<Options>16389</Options>
			<ParameterValues membercount="5">
				<Parameter type="Title">
					<Calculation datatype="1" position="0">
						<Calculation>
							<Text><![CDATA[_Syntax::Command_EN]]></Text>
							<ChunkList hash="952AB481816112169E5C64BCB47BACD0">
								<Chunk type="FieldRef">
									<FieldReference id="2" name="Command_EN" repetition="1">
										<TableOccurrenceReference id="1065113" name="_Syntax"></TableOccurrenceReference>
									</FieldReference>
								</Chunk>
							</ChunkList>
						</Calculation>
					</Calculation>
				</Parameter>
				<Parameter type="Message">
					<Calculation datatype="1" position="1">
						<Calculation>
							<Text><![CDATA[Austauschen( _Syntax::Comment ; "\¶" ; "¶" )]]></Text>
							<ChunkList hash="DADE1C3550D19B35E2BC62B84455FE7A">
								<Chunk type="FunctionRef">Austauschen</Chunk>
								<Chunk type="NoRef">( </Chunk>
								<Chunk type="FieldRef">
									<FieldReference id="18" name="Comment" repetition="1">
										<TableOccurrenceReference id="1065113" name="_Syntax"></TableOccurrenceReference>
									</FieldReference>
								</Chunk>
								<Chunk type="NoRef"> ; &quot;\¶&quot; ; &quot;¶&quot; )</Chunk>
							</ChunkList>
						</Calculation>
					</Calculation>
				</Parameter>
				<Parameter type="Button1" value="OK">
					<Boolean type="Commit" value="True"></Boolean>
				</Parameter>
				<Parameter type="Button2" value="Edit">
					<Boolean type="Commit" value="False"></Boolean>
				</Parameter>
				<Parameter type="Button3">
					<Boolean type="Commit" value="False"></Boolean>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="72" name="Verlasse Schleife wenn" enable="True">
			<Options>16384</Options>
			<ParameterValues membercount="1">
				<Parameter type="Calculation">
					<Calculation datatype="7" position="0">
						<Calculation>
							<Text><![CDATA[Hole ( LetzteMeldungswahl ) = 1]]></Text>
							<ChunkList hash="8C579970D437A4505D25C8DA36467E6A">
								<Chunk type="FunctionRef">Hole</Chunk>
								<Chunk type="NoRef"> ( </Chunk>
								<Chunk type="FunctionRef">LetzteMeldungswahl</Chunk>
								<Chunk type="NoRef"> ) = 1</Chunk>
							</ChunkList>
						</Calculation>
					</Calculation>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="70" name="Ende (wenn)" enable="True">
		</Step>
		<Step id="89" name="# (Kommentar)" enable="True">
			<Options>4</Options>
			<ParameterValues membercount="1">
				<Parameter type="Comment">
					<Comment value="Edit"></Comment>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="141" name="Variable setzen" enable="True">
			<Options>16388</Options>
			<ParameterValues membercount="1">
				<Parameter type="Variable">
					<value>
						<Calculation datatype="1" position="1">
							<Calculation>
								<Text><![CDATA[_Syntax::Comment]]></Text>
								<ChunkList hash="BCF8EFBCD3E25B765454020F54D6E4DE">
									<Chunk type="FieldRef">
										<FieldReference id="18" name="Comment" repetition="1">
											<TableOccurrenceReference id="1065113" name="_Syntax"></TableOccurrenceReference>
										</FieldReference>
									</Chunk>
								</ChunkList>
							</Calculation>
						</Calculation>
					</value>
					<Name value="$Comment"></Name>
					<repetition></repetition>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="87" name="Eigenes Dialogfeld anzeigen" enable="True">
			<Options>16389</Options>
			<ParameterValues membercount="6">
				<Parameter type="Title">
					<Calculation datatype="1" position="0">
						<Calculation>
							<Text><![CDATA["\"" & _Syntax::Command_EN & "\""]]></Text>
							<ChunkList hash="003D007C01580E4A769716084DAEA0AF">
								<Chunk type="NoRef">&quot;\&quot;&quot; &amp; </Chunk>
								<Chunk type="FieldRef">
									<FieldReference id="2" name="Command_EN" repetition="1">
										<TableOccurrenceReference id="1065113" name="_Syntax"></TableOccurrenceReference>
									</FieldReference>
								</Chunk>
								<Chunk type="NoRef"> &amp; &quot;\&quot;&quot;</Chunk>
							</ChunkList>
						</Calculation>
					</Calculation>
				</Parameter>
				<Parameter type="Message">
					<Calculation datatype="1" position="1">
						<Calculation>
							<Text><![CDATA["You may enter a comment to explain what this entry is about."]]></Text>
							<ChunkList hash="3BF7D0ABDF9253F6BAC3502AB9056A70">
								<Chunk type="NoRef">&quot;You may enter a comment to explain what this entry is about.&quot;</Chunk>
							</ChunkList>
						</Calculation>
					</Calculation>
				</Parameter>
				<Parameter type="Button1" value="OK">
					<Boolean type="Commit" value="True"></Boolean>
				</Parameter>
				<Parameter type="Button2" value="Cancel">
					<Boolean type="Commit" value="False"></Boolean>
				</Parameter>
				<Parameter type="Button3">
					<Boolean type="Commit" value="False"></Boolean>
				</Parameter>
				<Parameter type="Field1">
					<Parameter type="Target">
						<FieldReference id="18" name="Comment">
							<repetition value="1"></repetition>
							<TableOccurrenceReference id="1065113" name="_Syntax"></TableOccurrenceReference>
						</FieldReference>
					</Parameter>
					<Boolean type="Passwort" value="False"></Boolean>
					<Parameter type="Label">
						<Calculation datatype="1" position="2">
							<Calculation>
								<Text><![CDATA["Comment"]]></Text>
								<ChunkList hash="26B16D9CEE8EB7A643A9BB508F2E0546">
									<Chunk type="NoRef">&quot;Comment&quot;</Chunk>
								</ChunkList>
							</Calculation>
						</Calculation>
					</Parameter>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="72" name="Verlasse Schleife wenn" enable="True">
			<Options>16384</Options>
			<ParameterValues membercount="1">
				<Parameter type="Calculation">
					<Calculation datatype="7" position="0">
						<Calculation>
							<Text><![CDATA[IstLeer( _Syntax::Comment ) ODER _Syntax::Comment = $Comment]]></Text>
							<ChunkList hash="D035BBB6D73A4AA17CA11AA823A1CE36">
								<Chunk type="FunctionRef">IstLeer</Chunk>
								<Chunk type="NoRef">( </Chunk>
								<Chunk type="FieldRef">
									<FieldReference id="18" name="Comment" repetition="1">
										<TableOccurrenceReference id="1065113" name="_Syntax"></TableOccurrenceReference>
									</FieldReference>
								</Chunk>
								<Chunk type="NoRef"> ) </Chunk>
								<Chunk type="FunctionRef">ODER</Chunk>
								<Chunk type="NoRef"> </Chunk>
								<Chunk type="FieldRef">
									<FieldReference id="18" name="Comment" repetition="1">
										<TableOccurrenceReference id="1065113" name="_Syntax"></TableOccurrenceReference>
									</FieldReference>
								</Chunk>
								<Chunk type="NoRef"> = </Chunk>
								<Chunk type="VariableReference">$Comment</Chunk>
							</ChunkList>
						</Calculation>
					</Calculation>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="73" name="Schleife (Ende)" enable="True">
		</Step>
		<Step id="70" name="Ende (wenn)" enable="True">
		</Step>
		<Step id="89" name="# (Kommentar)" enable="True">
			<ParameterValues membercount="1">
				<Parameter type="Comment">
					<Comment></Comment>
				</Parameter>
			</ParameterValues>
		</Step>
	</ObjectList>
</Script>
