tests/snapshots/scripts/fmSyntaxColorizer/fmSyntaxColorizer - ID 64/Syntax - ID 56/Remove all - ID 62.xml.snap
---
source: src/main.rs
expression: output_content
---
<Script>
	<ScriptReference id="62" name="Remove all"></ScriptReference>
	<ObjectList membercount="9">
		<Step id="89" name="# (Kommentar)" enable="True">
			<ParameterValues membercount="1">
				<Parameter type="Comment">
					<Comment></Comment>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="89" name="# (Kommentar)" enable="True">
			<Options>4</Options>
			<ParameterValues membercount="1">
				<Parameter type="Comment">
					<Comment value="20121102 MrW Refreshes the currently found commands"></Comment>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="89" name="# (Kommentar)" enable="True">
			<ParameterValues membercount="1">
				<Parameter type="Comment">
					<Comment></Comment>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="75" name="Schreibe Änderung Datens./Abfrage" enable="True">
			<Options>128</Options>
			<ParameterValues membercount="3">
				<Parameter type="Boolean">
					<Boolean type="Dateneingabeüberprüfung unterdrücken" id="256" value="False"></Boolean>
				</Parameter>
				<Parameter type="Boolean">
					<Boolean type="Mit Dialog" id="128" value="False"></Boolean>
				</Parameter>
				<Parameter type="Boolean">
					<Boolean type="Schreiben erzwingen" id="512" value="False"></Boolean>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="55" name="Blätternmodus aktivieren" enable="True">
			<ParameterValues membercount="1">
				<Parameter type="Boolean">
					<Boolean type="Pause" id="16777216" value="False"></Boolean>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="6" name="Gehe zu Layout" enable="True">
			<Options>10</Options>
			<ParameterValues membercount="2">
				<Parameter type="LayoutReferenceContainer">
					<LayoutReferenceContainer value="5">
						<LayoutReference id="6" name="Syntax"></LayoutReference>
					</LayoutReferenceContainer>
				</Parameter>
				<Parameter type="Animation">
					<Animation name="Ohne" value="0"></Animation>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="91" name="Ersetze alle Feldwerte" enable="True">
			<Options>16517</Options>
			<ParameterValues membercount="3">
				<Parameter type="Boolean">
					<Boolean type="Mit Dialog" id="128" value="False"></Boolean>
				</Parameter>
				<Parameter type="FieldReference">
					<FieldReference id="6" name="On">
						<repetition value="1"></repetition>
						<TableOccurrenceReference id="1065113" name="_Syntax"></TableOccurrenceReference>
					</FieldReference>
				</Parameter>
				<Parameter type="replace">
					<List name="Durch Berechnung ersetzen: " value="3">
						<Calculation datatype="1" position="0">
							<Calculation>
								<Text><![CDATA[1]]></Text>
								<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
									<Chunk type="NoRef">1</Chunk>
								</ChunkList>
							</Calculation>
						</Calculation>
					</List>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="75" name="Schreibe Änderung Datens./Abfrage" enable="True">
			<Options>128</Options>
			<ParameterValues membercount="3">
				<Parameter type="Boolean">
					<Boolean type="Dateneingabeüberprüfung unterdrücken" id="256" value="False"></Boolean>
				</Parameter>
				<Parameter type="Boolean">
					<Boolean type="Mit Dialog" id="128" value="False"></Boolean>
				</Parameter>
				<Parameter type="Boolean">
					<Boolean type="Schreiben erzwingen" id="512" value="False"></Boolean>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="89" name="# (Kommentar)" enable="True">
			<ParameterValues membercount="1">
				<Parameter type="Comment">
					<Comment></Comment>
				</Parameter>
			</ParameterValues>
		</Step>
	</ObjectList>
</Script>
