tests/snapshots/scripts/fmSyntaxColorizer/fmSyntaxColorizer - ID 64/Syntax - ID 56/Sort Syntax - ID 87.xml.snap
---
source: src/main.rs
expression: output_content
---
<Script>
	<ScriptReference id="87" name="Sort Syntax"></ScriptReference>
	<ObjectList membercount="6">
		<Step id="89" name="# (Kommentar)" enable="True">
			<ParameterValues membercount="1">
				<Parameter type="Comment">
					<Comment></Comment>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="89" name="# (Kommentar)" enable="True">
			<Options>4</Options>
			<ParameterValues membercount="1">
				<Parameter type="Comment">
					<Comment value="20200706 MrW Added Collections"></Comment>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="89" name="# (Kommentar)" enable="True">
			<Options>4</Options>
			<ParameterValues membercount="1">
				<Parameter type="Comment">
					<Comment value="20121102 MrW "></Comment>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="89" name="# (Kommentar)" enable="True">
			<ParameterValues membercount="1">
				<Parameter type="Comment">
					<Comment></Comment>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="39" name="Sortieren" enable="True">
			<Options>33587328</Options>
			<ParameterValues membercount="3">
				<Parameter type="Boolean">
					<Boolean type="Mit Dialog" id="128" value="False"></Boolean>
				</Parameter>
				<Parameter type="Restore">
					<Restore value="True"></Restore>
				</Parameter>
				<Parameter type="SortSpecification">
					<SortSpecification value="True" maintain="True">
						<SortList membercount="2">
							<Sort type="Ascending">
								<PrimaryField>
									<FieldReference id="41" name="Collection">
										<TableOccurrenceReference id="1065113" name="_Syntax"></TableOccurrenceReference>
									</FieldReference>
								</PrimaryField>
							</Sort>
							<Sort type="Ascending">
								<PrimaryField>
									<FieldReference id="1" name="Sort">
										<TableOccurrenceReference id="1065113" name="_Syntax"></TableOccurrenceReference>
									</FieldReference>
								</PrimaryField>
							</Sort>
						</SortList>
					</SortSpecification>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="89" name="# (Kommentar)" enable="True">
			<ParameterValues membercount="1">
				<Parameter type="Comment">
					<Comment></Comment>
				</Parameter>
			</ParameterValues>
		</Step>
	</ObjectList>
</Script>
